# vanish

./: .env.example  .gitignore  .pre-commit-config.yaml  BLUEPRINT.md  CONTRIBUTING.md  CRYPTO-SPEC.md  KDF-PARAMS.md  LICENSE  PHASE-1-KICKOFF.md  PHASE-2-KICKOFF.md  README.md  REVIEW-PACKET.md  ROADMAP.md  SECURITY-CLAIMS.md  THREAT-MODEL.md  pyproject.toml
.github/workflows/: ci.yml
outreach/: cryptographer-email.md  lawyer-email.md
scripts/: me.sh
tests/: conftest.py  test_audit.py  test_automation.py  test_brokers.py  test_cli.py  test_db.py  test_guide.py  test_redgate_probe.py  test_requests_gen.py
tests/account/: conftest.py  test_actions.py  test_auth.py  test_crypto.py  test_dashboard.py  test_export_dashboard.py  test_findings.py  test_identity_gate.py  test_rescan_relist.py  test_runner.py  test_scan.py  test_zk_invariants.py
tools/: argon2_benchmark.py
vanish/: __init__.py  accounts.py  audit.py  automation.py  brokers.py  cli.py  db.py  guide.py  requests_gen.py  ui.py
vanish/account/: __init__.py  actions.py  auth.py  crypto.py  dashboard.html  dashboard.py  export_dashboard.py  findings.py  identity.py  runner.py  scan.py  sodium.py  store.py
vanish/data/: brokers.json
